--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,9 @@ yarn-error.log*
 # TypeScript
 *.tsbuildinfo
 next-env.d.ts
+
+# Environment variables
+.env
+
+# Claude Code local settings
+.claude/settings.local.json
